--- a/2. NavbarWithSearchAnimation/index.html
+++ b/2. NavbarWithSearchAnimation/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pulsing Button</title>
+    <title>Navbar With Search Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <nav class="nav">
+        <div class="nav-items">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Team</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="search-box">
+            <input type="text" placeholder="Search..." class="search-input">
+            <button class="search-btn">🔎</button>
+        </div>
+    </nav>
 
     <script src="script.js"></script>
 </body>
