--- a/RandomTesting/index.html
+++ b/RandomTesting/index.html
@@ -67,6 +67,11 @@
         <button type="submit">go</button>
     </form>
 
+    <br>
+
+    <button class="apperance">TESTING</button>
+    <button class="apperance-none">TESTING</button>
+
 </body>
 
 </html>
