--- a/5. Accordion/index.html
+++ b/5. Accordion/index.html
@@ -15,7 +15,7 @@
         <div class="accordion-box">
             <button class="accordion-btn" ">
                 <i class="fas fa-cocktail"></i>
-                Opcja 1</button>
+                Option 1</button>
             <div class="accordion-info">
                 <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
             </div>
@@ -23,7 +23,7 @@
         <div class="accordion-box">
             <button class="accordion-btn" >
                 <i class="fas fa-bacon"></i>
-                Opcja 2</button>
+                Option 2</button>
             <div class="accordion-info">
                 <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
                 <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
@@ -32,7 +32,7 @@
         <div class="accordion-box">
             <button class="accordion-btn" >
                 <i class="far fa-bell"></i>
-                Opcja 3</button>
+                Option 3</button>
             <div class="accordion-info" >
                 <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
                 <p class="accordion-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
