--- a/12. Cookie Alert/index.html
+++ b/12. Cookie Alert/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="cookie-box">
-        <p>Nasza strona korzysta z ciasteczek!</p>
-        <button class="cookie-btn">Akceptuj 🍪!</button>
+        <p>Our website uses cookies!</p>
+        <button class="cookie-btn">Accept 🍪!</button>
     </div>
 
     <script src="script.js"></script>
