--- a/14. Scroll Spy/index.html
+++ b/14. Scroll Spy/index.html
@@ -13,15 +13,15 @@
 
     <nav>
         <a href="#home" class="active">Home</a>
-        <a href="#section-1">Sekcja 1</a>
-        <a href="#section-2">Sekcja 2</a>
-        <a href="#section-3">Sekcja 3</a>
+        <a href="#section-1">Section 1</a>
+        <a href="#section-2">Section 2</a>
+        <a href="#section-3">Section 3</a>
     </nav>
 
     <div class="section" id="home">Home</div>
-    <div class="section" id="section-1">Sekcja 1</div>
-    <div class="section" id="section-2">Sekcja 2</div>
-    <div class="section" id="section-3">Sekcja 3</div>
+    <div class="section" id="section-1">Section 1</div>
+    <div class="section" id="section-2">Section 2</div>
+    <div class="section" id="section-3">Section 3</div>
 
     <script src="script.js"></script>
 </body>
