--- a/5. Accordion/index.html
+++ b/5. Accordion/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,31 +14,35 @@
     <div class="accordion">
         <div class="accordion-box">
             <button class="accordion-btn" ">
-                <i class="fas fa-cocktail"></i>
+                <i class=" fas fa-cocktail"></i>
                 Option 1</button>
             <div class="accordion-info">
-                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
+                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni
+                    inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
             </div>
         </div>
         <div class="accordion-box">
-            <button class="accordion-btn" >
+            <button class="accordion-btn">
                 <i class="fas fa-bacon"></i>
                 Option 2</button>
             <div class="accordion-info">
-                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
-                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
+                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni
+                    inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
+                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni
+                    inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
             </div>
         </div>
         <div class="accordion-box">
-            <button class="accordion-btn" >
+            <button class="accordion-btn">
                 <i class="far fa-bell"></i>
                 Option 3</button>
-            <div class="accordion-info" >
-                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
+            <div class="accordion-info">
+                <p class="accordion-info-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui magni
+                    inventore quaerat iure eos ipsam quia, odio quod laudantium eaque!</p>
                 <p class="accordion-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
-      
+
     </div>
 
     <script src="script.js"></script>
