--- a/Website Components/Scrollspy/index.html
+++ b/Website Components/Scrollspy/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scroll Spy</title>
+    <title>Scrollspy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,6 @@
         <a href="#section-2">Section 2</a>
         <a href="#section-3">Section 3</a>
     </nav>
-
     <div class="section" id="home">Home</div>
     <div class="section" id="section-1">Section 1</div>
     <div class="section" id="section-2">Section 2</div>
