--- a/Website Components/Slider/index.html
+++ b/Website Components/Slider/index.html
@@ -13,9 +13,9 @@
 
     <div class="slider">
         <div class="slider-box">
-            <img class="slider-img" src="./img/1.png" alt="Battlefield" />
-            <img class="slider-img" src="./img/2.png" alt="Battlefield" />
-            <img class="slider-img" src="./img/3.png" alt="Battlefield" />
+            <img class="slider-img" src="./img/1.png" alt="Image" />
+            <img class="slider-img" src="./img/2.png" alt="Image" />
+            <img class="slider-img" src="./img/3.png" alt="Image" />
         </div>
         <button class="btn btn-left"><span>&lt;</span></button>
         <button class="btn btn-right"><span>&gt;</span></button>
