--- a/Website Components/Zoom Images/index.html
+++ b/Website Components/Zoom Images/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="image-box">
-        <img src="./img.png" alt="Battlefield">
+        <img src="./img/Image.png" alt="Image">
     </div>
 
     <script src="script.js"></script>
